tous les bugs sont fixés